# cv2-pipelines

./: CMakeLists.txt  main.cpp
